<resources>
    <string name="app_name">iContatos</string>
    <string name="welcome1_title">Gerencie seus contatos e seu próprio perfil utilizando o prático iContatos!</string>
    <string name="welcome2_title">Obrigado por escolher o app iContatos. Clique em \'Iniciar\' e comece a usar esse incrível app!</string>
    <string name="iniciar">Iniciar</string>
    <string name="contatos">Contatos</string>
    <string name="perfil">Perfil</string>
    <string name="query_hint">Procurar por...</string>
    <string name="editar">Editar</string>
    <string name="ligar">Ligar</string>
    <string name="instagram">Instagram</string>
    <string name="mail">Mail</string>
    <string name="adicionar_novo_contato">Adicionar Novo Contato</string>
    <string name="campos_obrigatorios">*Campos Obrigatórios</string>
    <string name="nome">Nome*</string>
    <string name="telefone">Telefone*</string>
    <string name="email">Email*</string>
    <string name="facebook">Facebook</string>
    <string name="relacionamento">Relacionamento*</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="editContacts">Editar Contato</string>
    <string name="editProfile">Editar perfil</string>
</resources>