<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".mainscreen.AddEditContactDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/screenTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/adicionar_novo_contato"
            android:textSize="22sp"
            android:textColor="@color/light_black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:text="@string/campos_obrigatorios"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:cardCornerRadius="100dp">
                <ImageView
                    android:id="@+id/contactImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_background"/>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contactNameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            style="@style/TextInputStyle"
            app:startIconDrawable="@drawable/ic_perfil">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contactNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contactPhoneInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefone"
            style="@style/TextInputStyle"
            app:startIconDrawable="@drawable/ic_call">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contactPhoneEditText"
                android:layout_width="match_parent"
                android:inputType="phone"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contactMailInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            style="@style/TextInputStyle"
            app:startIconDrawable="@drawable/ic_mail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contactMailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contactInstagramInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/instagram"
            style="@style/TextInputStyle"
            app:startIconDrawable="@drawable/ic_camera">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contactInstagramEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contactFacebookInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/facebook"
            style="@style/TextInputStyle"
            app:startIconDrawable="@drawable/ic_facebook">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contactFacebookEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contactRelationshipInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/relacionamento"
            style="@style/DropdownStyle">

            <AutoCompleteTextView
                android:id="@+id/relationshipTextView"
                android:inputType="none"
                android:popupBackground="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/buttonCancel"
                android:text="@string/cancelar"
                android:textSize="24sp"
                android:textColor="@color/gray"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/buttonConfirm"
                android:text="@string/confirmar"
                android:textSize="24sp"
                android:textColor="@color/primaryColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>